# bid-acceleration-engine

./: .gitignore  CLAUDE.md  MANAGER_BRIEFING.md  SPECS_STATUS.md  pyproject.toml  walkthrough_phase1_phase2.py  walkthrough_phase1_to_phase3.py  walkthrough_phase1_to_phase4.py
specs/: phase_2_requirement_extraction.md  phase_3_data_ingestion_agent.md
src/bid_acceleration_engine/: __init__.py
src/bid_acceleration_engine/agents/: __init__.py  base.py
src/bid_acceleration_engine/prompts/: __init__.py
src/bid_acceleration_engine/schemas/: __init__.py  architecture.py  bid.py  data_ingestion.py  delivery.py  enhanced_bid.py  requirements.py  results.py  review.py  solution.py  transformation.py
src/bid_acceleration_engine/utils/: __init__.py  date_parser.py  document_reader.py  file_io.py  logging.py
tests/: __init__.py  conftest.py
tests/agents/: test_base.py  test_bid_intake_agent.py  test_bid_intake_parsers.py  test_bid_intake_validation.py  test_data_ingestion_spec.py  test_phase1_5_agent.py  test_phase1_5_spec.py  test_phase3_validation.py  test_requirement_extraction_spec.py  test_transformation_spec.py
tests/fixtures/: PHASE1_5_GOLDEN_SET_README.md  phase1_5_golden_set.json
tests/fixtures/sample_bids/: complex_rfp.txt  minimal_rfp.txt  simple_rfp.txt  test_rfp_document.docx  uk_local_council_data_analytics.txt  uk_nhs_trust_population_health.txt  uk_transport_network_data_system.txt  uk_university_research_data_repository.txt  (+1 more)
tests/schemas/: test_bid.py  test_results.py
tests/utils/: test_date_parser.py  test_document_reader.py  test_file_io.py
(+28 files in other folders)
