[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bid-acceleration-engine"
version = "0.1.0"
description = "Local-first AI pipeline for accelerating government bid responses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/bid_acceleration_engine"]
